--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <a href=""><img src="./images/img1.jpg" alt="фото сотрудника" width="270" height="260"></a>
+                <img src="./images/img1.jpg" alt="фото сотрудника" width="270" height="260">
                 <p>Игорь Демьяненко</p>
                 <p>Product Designer</p>
             </li>
             <li>
-                <a href=""><img src="./images/img2.jpg" alt="фото сотрудника" width="270" height="260"></a>
+                <img src="./images/img2.jpg" alt="фото сотрудника" width="270" height="260">
                 <p>Ольга Репина</p>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <a href=""><img src="./images/img3.jpg" alt="фото сотрудника" width="270" height="260"></a>
+                <img src="./images/img3.jpg" alt="фото сотрудника" width="270" height="260">
                 <p>Николай Тарасов</p>
                 <p>Marketing</p>
             </li>
             <li>
-                <a href=""><img src="./images/img4.jpg" alt="фото сотрудника" width="270" height="260"></a>
+                <img src="./images/img4.jpg" alt="фото сотрудника" width="270" height="260">
                 <p>Михаил Ермаков</p>
                 <p>UI Designer</p>
             </li>
@@ -108,8 +108,8 @@
         <a href="./index.html">WebStudio</a>
              
         <address>
+            г. Киев, пр-т Леси Украинки, 26
             <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
